--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,9 +94,9 @@ revm-primitives = { version = "9.0.0", features = [
     "std",
     "serde",
 ], default-features = false }
-revm-inspectors = "0.6"
-revm-interpreter = { version = "=10.0.1", default-features = false }
-revm-precompile = { version = "=11.0.1", default-features = false }
+# revm-inspectors = "0.6"
+# revm-interpreter = { version = "=10.0.1", default-features = false }
+# revm-precompile = { version = "=11.0.1", default-features = false }
 
 # alloy
 alloy-primitives = { version = "0.8.4", features = ["sha3-keccak"] }
@@ -122,3 +122,8 @@ rust.unreachable_pub = "warn"
 rust.unused_must_use = "deny"
 rust.rust_2018_idioms = { level = "deny", priority = -1 }
 rustdoc.all = "warn"
+
+[patch.crates-io]
+revm = { git = "https://github.com/nhtyy/revm", branch = "n/skip_jumpdest_analysis" }
+revm-primitives = { git = "https://github.com/nhtyy/revm", branch = "n/skip_jumpdest_analysis" }
+revm-interpreter = { git = "https://github.com/nhtyy/revm", branch = "n/skip_jumpdest_analysis" } 
